# printerlynx_printer_agent

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build-test-publish.yml
src/: lib.rs  main.rs
src/adapters/: agent_adapter.rs  mod.rs  serial_agent_adapter.rs
src/adapters/serial/: serial_agent_adapter.rs  serial_printer.rs
src/common/: app_error.rs  gcode_command.rs  gcode_file_reader.rs  gcode_parser.rs  mod.rs
src/domain/: mod.rs  print_agent.rs  printer.rs
src/driver/: adapter.rs  mod.rs
src/driver/serial/: serial_adapter.rs
src/infra/: http_client.rs  mod.rs  websocket_client.rs
